// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DomainStatusTag should render for blocked status 1`] = `
<WithPositioning(Tooltip)
  content="This domain is not available for use. For more information, please contact support."
  dark={true}
>
  <Tag
    color="red"
  >
    <Icon
      name="ErrorOutline"
      size={15}
    />
     Blocked
  </Tag>
</WithPositioning(Tooltip)>
`;

exports[`Component: DomainStatusTag should render for pending status 1`] = `
<WithPositioning(Tooltip)
  content="This domain is pending review, please check back again soon."
  dark={true}
>
  <Tag>
    <Icon
      name="ClockOutline"
      size={15}
    />
     Pending
  </Tag>
</WithPositioning(Tooltip)>
`;

exports[`Component: DomainStatusTag should render for unverified status 1`] = `
<WithPositioning(Tooltip)
  content="This domain is not available for use. For more information, please contact support."
  dark={true}
>
  <Tag
    color="yellow"
  >
    <Icon
      name="ErrorOutline"
      size={15}
    />
     Unverified
  </Tag>
</WithPositioning(Tooltip)>
`;

exports[`Component: DomainStatusTag should render for verified status 1`] = `
<Tag>
  Verified
</Tag>
`;

exports[`Component: DomainStatusTag should render null without status 1`] = `""`;
